<resources>
    <string name="app_name">Proyecto_Tommy</string>
    <string name="contrasena">Contraseña</string>
    <string name="registro">¿No tiene cuenta? Regístrese</string>
    <string name="usuario">Usuario</string>
    <string name="log_in">LOG IN</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="Email">email</string>

    <string-array name="ordenarPor">
        <item>Precio ascendente</item>
        <item>Precio descendente</item>
        <item>Nombre A-Z</item>
        <item>Nombre Z-A</item>
    </string-array>
    <string-array name="tipoUsuario">
        <item>Alumno</item>
        <item>Profesor</item>
    </string-array>

    <string name="title_activity_portada">Portada</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="imagen_del_ordenador">Imagen del ordenador</string>
    <string name="textview">TextView</string>
    <string name="app_realizada_para_el_proyecto_de_pgl">App realizada para el proyecto de PGL</string>
    <string name="por_tommy_karlsen">Por Tommy Karlsen</string>
    <string name="logo_del_centro">Logo del centro</string>
    <string name="ordenar_por">Ordenar por:</string>
    <string name="no_hay_ning_n_ordenador_en_tu_lista">No hay ningún ordenador en tu lista</string>
    <string name="pulse_para_a_adir_un_pc">Pulse para añadir un pc</string>
    <string name="perfil">Perfil</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="volver">Volver</string>
    <string name="REGISTRO">REGISTRO</string>
    <string name="tipo_de_usuario">Tipo de usuario</string>
    <string name="curso">Curso</string>
    <string name="vuelva_a_escribir_la_contrase_a">Vuelva a escribir la contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="imagen_del_componente">Imagen del componente</string>
    <string name="id">Id</string>
    <string name="nombre">Nombre</string>
    <string name="precio">Precio</string>
    <string name="app_pc">APP PC</string>
    <string name="email_usuario">Email @ usuario</string>
    <string name="bienvenido_puede_abrir_el_menu_en_la_esquina_superior_izquierda">¡Bienvenido! Puede abrir el menu en la esquina superior izquierda</string>
</resources>