<?xml version="1.0" encoding="utf-8"?><!-- Cambio de fondo con el drawable de fondo.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Registro">

    <TextView
        android:id="@+id/emailHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/REGISTRO"
        android:textAlignment="center"
        android:textColor="#757575"
        android:textSize="34sp" />
    <!-- los inputs son redondeados con el style especificado y el radius-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtUsuReg"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/white"
        app:errorTextColor="#E72900"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:tooltipText="Insertar email" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtTipo"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/tipo_de_usuario"
            android:textColorHint="@color/white"
            android:tooltipText="Insertar tipo de usuario"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/white"
            app:endIconTint="@color/white"
            app:hintTextColor="@color/white">

            <AutoCompleteTextView
                android:id="@+id/dropDownTipos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:inputType="none"
                android:textColor="@color/white"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtCursoP"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_weight="1"
            android:textColorHint="@color/white"
            android:tooltipText="Insertar curso"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxStrokeColor="@color/white"
            app:errorTextColor="#E72900"
            app:hintTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="@string/curso"
                android:inputType="number"
                android:numeric="integer"
                android:textColor="@color/white"
                android:tooltipText="Ingresar curso"
                tools:ignore="Deprecated" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtContraReg"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/white"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:errorTextColor="#E72900"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:tooltipText="Insertar contraseña" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtConfContra"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/white"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/white"
        app:errorTextColor="#E72900"
        app:hintTextColor="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputConfirmContrasena"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/vuelva_a_escribir_la_contrase_a"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:tooltipText="Volver a insertar contraseña" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- El color se cambia con el drawable de btn_redondo.xml y hay que cambiar el tint a null-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRegistrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/btn_redondo"
            android:text="@string/registrar"
            android:textColor="#212121"
            android:tooltipText="Completar el registro"
            app:backgroundTint="@null"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btnRegistrar2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:background="@drawable/btn_redondo"
            android:text="@string/volver"
            android:textColor="#212121"
            android:tooltipText="Iniciar sesion"
            app:backgroundTint="@null"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

</LinearLayout>